Account for external, encrypted access tokens
Up to this point my assumption was that if anyone was doing encrypted
tokens, it was the identity service. But Auth0 uses JWEs with direct
encryption -- i.e., essentially opaque tokens.

Usually that would make it much trickier to determine who to ask about
a given token, but they _also_ include a (non-standard) "iss" field in
the header, which is unencrypted. I don't know if other providers do
this; if they don't, we'll need another tactic.

--- a/charts/identity/templates/identity/deployment.yaml
+++ b/charts/identity/templates/identity/deployment.yaml
@@ -23,7 +23,7 @@ spec:
         {{- include "unikorn.otlp.flags" . | nindent 8 }}
         - --host=https://{{ include "unikorn.identity.host" . }}
         {{- with $oidchost := .Values.identity.externalOIDCHost }}
-        - --oidc-host=https://{{ $oidchost }}
+        - --oidc-host=https://{{ $oidchost }}/
         {{- end }}
         - --jose-tls-secret={{ .Release.Name }}-jose-tls
         - --refresh-token-duration={{ printf "%dh" (mul .Values.issuer.maxTokenDurationDays 24) }}
