Split Up Infrastructure Service Roles
Compute and Kubernetes service requirements have diverged somewhat, and
will only get more out of sync when V2 occurs.  This splits the exising
role into two new ones which only have the required permissions for
operation.  Where V2 will tighten up the roles further I've added
comments about what needs to be deleted.

The application manager service is dead, so remove that too.

--- a/charts/identity/values.yaml
+++ b/charts/identity/values.yaml
@@ -128,8 +128,8 @@ platformAdministrators:
 
 # System accounts map X.509 Common Names to roles.
 systemAccounts:
-  unikorn-kubernetes: infra-manager-service
-  unikorn-compute: infra-manager-service
+  unikorn-kubernetes: kubernetes-service
+  unikorn-compute: compute-service
 
 # A static list of roles.
 # Any unscoped API resources are to be managed by the platform operator
@@ -172,32 +172,32 @@ roles:
         compute:clusters: [create,read,update,delete]
         application:applications: [create,read,update,delete]
         application:applicationsets: [create,read,update,delete]
-  # An infrastructure manager service is a role primarily for Kubernetes like
-  # services that can manage identities and physical networks on behalf of a cluster.
-  infra-manager-service:
-    decription: Infrastructure manager service
+  kubernetes-service:
+    decription: Kubernetes service
     protected: true
     scopes:
       global:
         identity:allocations: [create,read,update,delete]
-        region:identities: [create,read,delete]
+        region:identities: [create,read,delete] # TODO: Create/delete V1 only
         region:regions: [read]
         region:regions/detail: [read]
         region:flavors: [read]
         region:images: [read]
         region:externalnetworks: [read]
-        region:networks: [create,read,delete]
-        region:servers: [create,read,update,delete]
-        region:securitygroups: [create,read,update,delete]
-  # An application manager is a role primarily for the application service that
-  # needs to be able to see the Kubernetes clusters it's deploying applications
-  # on to.
-  application-manager-service:
-    description: Application manager service
+        region:networks: [create,read,delete] # TODO: Create/delete V1 only
+  compute_service:
+    decription: Compute service
     protected: true
     scopes:
       global:
-        kubernetes:clusters: [read]
+        identity:allocations: [create,read,update,delete]
+        region:identities: [create,read,delete] # TODO: V2 delete me, created by network
+        region:regions: [read]
+        region:flavors: [read]
+        region:images: [read]
+        region:networks: [create,read,delete] # TODO: Create/delete V1 only
+        region:servers: [create,read,update,delete]
+        region:securitygroups: [create,read,update,delete] # TODO: Create/delete/update V1 only
   # An administrator can do anything within an organization.
   administrator:
     description: Organization administrator
