Include account type in userinfo response
I'm trying to decouple authorisation from identity, so that (at least
in principle) an authorisation service can be run separately to the
identity service, and without the user database kept by the identity
service.

One bit to detangle is that `RBAC.GetACL()` relies on knowing the kind
of account represented by an access token.

This works at present because the handler that calls GetACL is behind
middleware (pkg/middleware/openapi/local) which puts that information
in the context. But since this relies on running in the same place as
the token issuer, which has the decryption keys, a decoupled
authorisation service would not be able to see that information.

So: include the account type amongst the claims returned by /userinfo,
so that it will be visible to the middleware, whether called remotely
or in-process with the issuer. The custom claims go in a namespaced
sub-object, to avoid pollution.

This custom claim will _not_ be present by default in /userinfo
returned by other providers; but that can be worked around:

 - assume a /userinfo response without the field is a user (works if
   system and service accounts are only internal to UNI);

 - add the claim to /userinfo results from the provider, by using a
   platform-specific extension mechanism (platforms like Auth0 let you
   add claims into the ID tokens).

--- a/pkg/openapi/server.spec.yaml
+++ b/pkg/openapi/server.spec.yaml
@@ -1428,12 +1428,26 @@ components:
         expires_in:
           description: The time in seconds the token will last for.
           type: integer
+    authClaims:
+      description: Custom claims for authorisation, specific to UNI
+      required:
+      - acctype
+      properties:
+        acctype:
+          description: Denotes the type of account represented. This is non-standard claim.
+          type: string
+          enum:
+          - system
+          - service
+          - user
     userinfo:
       description: Access token introspection data.
       type: object
       required:
       - sub
       properties:
+        "https://unikorn-cloud.org/authz":
+          $ref: "#/components/schemas/authClaims"
         sub:
           description: The access token's subject.
           type: string
