--- a/pkg/openapi/server.spec.yaml
+++ b/pkg/openapi/server.spec.yaml
@@ -1432,6 +1432,7 @@ components:
       description: Custom claims for authorisation, specific to UNI
       required:
       - acctype
+      - orgIds
       properties:
         acctype:
           description: Denotes the type of account represented. This is non-standard claim.
@@ -1440,6 +1441,14 @@ components:
           - system
           - service
           - user
+        orgIds:
+          description: |
+            The IDs of organisations of which the account is a member. This may be just the org for which
+            they are currently authenticated.
+          type: array
+          items:
+            description: An organisation ID.
+            type: string
     userinfo:
       description: Access token introspection data.
       type: object
