Decouple group membership from UNI user database
Groups now reference user subjects (email addresses or another user
key, depending on the IdP) directly instead of K8s OrganizationUser
resource names. This enables authorization to work with any OIDC
identity provider (Auth0, etc.) without requiring users to be stored
in the UNI user database (i.e., as custom objects in the Kubernetes
API).

**This is a breaking change, requiring a migration to populate
Subjects from existing UserIDs before deploying (or at least before
running).**

Changes:
  - Add Subjects field to GroupSpec (API and CRD)
  - Deprecate UserIDs field (kept for backward compatibility)
  - Update RBAC to filter groups by subject from token claims
  - Update user/group handlers to use subjects for membership
  - Regenerate OpenAPI types and deepcopy code

The aim is for authorization to use only token claims (subject,
acctype, org_ids) to determine permissions, making it fully decoupled
from the K8s user database. Organizations, Groups and Roles still live
in Kubernetes and can be queried by authorisation; Users and
OrganizationUsers are queried by the user service.

I updated the ACL calculation test in rbac/groups_test.go to set the
objects up using the group.Spec.Subjects field, rather than creating
OrganizationUser objects. This demonstrates that the calculation still
works as expected.

Yet to do:

 - [ ] remove the dependence on querying ServiceAccount objects.

--- a/charts/identity/crds/identity.unikorn-cloud.org_groups.yaml
+++ b/charts/identity/crds/identity.unikorn-cloud.org_groups.yaml
@@ -59,6 +59,14 @@ spec:
                 items:
                   type: string
                 type: array
+              subjects:
+                description: |-
+                  Subjects are canonical user identifiers (typically email addresses)
+                  that are members of the group. This works with both local users
+                  and federated identity providers like Auth0.
+                items:
+                  type: string
+                type: array
               tags:
                 description: Tags are aribrary user data.
                 items:
@@ -76,7 +84,11 @@ spec:
                   type: object
                 type: array
               userIDs:
-                description: UserIDs are a list of users that are members of the group.
+                description: |-
+                  UserIDs are a list of users that are members of the group.
+                  DEPRECATED: Use Subjects instead. This field references K8s
+                  OrganizationUser resource names which couples the authorization
+                  to the K8s user database.
                 items:
                   type: string
                 type: array
