Add Group.Spec.Subjects field
This commit adds a field for referring to users directly. If using an
external IdP, we will not have the User and OrganizationUser records
to refer to (in .UserIDs).

This is to some extent backward-compatible: if the callers keep using
the UserIDs field, then the server will keep populating it -- while also
populating the Subjects field, to use in calculations.

The part that isn't backward-compatible is that once you send a
request with Subjects supplied, then UserIDs is forgotten about. These
fields are not interchangeable, because the subjects can refer to
users somewhere else.

--- a/charts/identity/crds/identity.unikorn-cloud.org_groups.yaml
+++ b/charts/identity/crds/identity.unikorn-cloud.org_groups.yaml
@@ -59,6 +59,14 @@ spec:
                 items:
                   type: string
                 type: array
+              subjects:
+                description: |-
+                  Subjects is a list of user subjects that are members of the group. Unlike
+                  UserIDs these do not have to refer to objects within the user database; they
+                  can refer to users at an external IdP, for example.
+                items:
+                  type: string
+                type: array
               tags:
                 description: Tags are aribrary user data.
                 items:
@@ -76,14 +84,9 @@ spec:
                   type: object
                 type: array
               userIDs:
-                description: UserIDs are a list of users that are members of the group.
-                items:
-                  type: string
-                type: array
-              users:
                 description: |-
-                  Users are a list of user names that are members of the group.
-                  CRDs.
+                  UserIDs are a list of users that are members of the group.
+                  Deprecated: use Subjects instead.
                 items:
                   type: string
                 type: array
