Allow Region Allocation Management
The region controller needs to be able to manage quota allocations on
behalf of users, specifically for networks, and more speifically to
avoid VLAN starvation.

--- a/charts/identity/values.yaml
+++ b/charts/identity/values.yaml
@@ -185,6 +185,7 @@ roles:
     protected: true
     scopes:
       global:
+        identity:allocations: [create,read,update,delete]
         identity:projects/references: [create,delete]
   kubernetes-service:
     description: Kubernetes service
