Plumb external-oidc-host arg through from chart to main
This puts the external OIDC host flags into main (via pkg/server), and
makes sure its represented in the chart values.

--- a/charts/identity/templates/identity/deployment.yaml
+++ b/charts/identity/templates/identity/deployment.yaml
@@ -24,6 +24,9 @@ spec:
         - --host=https://{{ include "unikorn.identity.host" . }}
         - --jose-tls-secret={{ .Release.Name }}-jose-tls
         - --refresh-token-duration={{ printf "%dh" (mul .Values.issuer.maxTokenDurationDays 24) }}
+        {{- with $oidchost := .Values.authentication.externalOIDCIssuer }}
+        - --external-oidc-host={{ $oidchost }}
+        {{- end }}
         {{- $adminRoles := list }}
         {{- range $index, $name := .Values.platformAdministrators.roles }}
           {{- $adminRoles = append $adminRoles (include "resource.id" $name) }}
