--- a/charts/identity/values.yaml
+++ b/charts/identity/values.yaml
@@ -61,6 +61,9 @@ projectController:
 identity:
   host: identity.acme.org
 
+authentication:
+  externalOIDCIssuer: ~
+
 onboarding:
   # Allows anonymous signups.  Be damn sure if you do this you are in control
   # of quotas to prevent misuse!
