Update to match external-oidc-host arg

--- a/charts/identity/templates/identity/deployment.yaml
+++ b/charts/identity/templates/identity/deployment.yaml
@@ -22,8 +22,8 @@ spec:
         {{- include "unikorn.cors.flags" . | nindent 8 }}
         {{- include "unikorn.otlp.flags" . | nindent 8 }}
         - --host=https://{{ include "unikorn.identity.host" . }}
-        {{- with $oidchost := .Values.identity.externalOIDCHost }}
-        - --oidc-host={{ $oidchost }}
+        {{- with $oidchost := .Values.authentication.externalOIDCIssuer }}
+        - --external-oidc-host={{ $oidchost }}
         {{- end }}
         - --jose-tls-secret={{ .Release.Name }}-jose-tls
         - --refresh-token-duration={{ printf "%dh" (mul .Values.issuer.maxTokenDurationDays 24) }}
