--- a/charts/identity/values.yaml
+++ b/charts/identity/values.yaml
@@ -60,7 +60,9 @@ projectController:
 # oauth2 issuer etc.
 identity:
   host: identity.unikorn.nscale.org
-  externalOIDCHost: ~
+
+authentication:
+  externalOIDCIssuer: ~
 
 onboarding:
   # Allows anonymous signups.  Be damn sure if you do this you are in control
