Support Unscoped ACLs
Newer APIs recognize that organization and project IDs are unnecessary
in the path most of the time, especially when accessing a resource by
ID, and then you can derive those from the resource itself after reading
it.  In other situations you can derive it from a linked resource e.g. a
server is attached to a network from which you can inherit the IDs.  The
only time they are really needed to be provided is for a top level
resource, on creation, and those can be passed in the body as immutable
paramters ostensibly.

This leaves us in a world where the usual ACL path (which requires an
organization ID) doesn't work for non-admin users.  The fix however is
quite simple, rather than lookup a known organization ID, look for all
possible IDs that the user is a member of and return an ACL containing
all of those and any nested project permissions.

This lives along side the existing RBAC method allowing a seamless and
backwards compatible upgrade path.  Internal RBAC checks can be migrated
straight away.

--- a/pkg/openapi/server.spec.yaml
+++ b/pkg/openapi/server.spec.yaml
@@ -1673,33 +1673,53 @@ components:
       type: array
       items:
         $ref: '#/components/schemas/aclEndpoint'
-    aclScopedEndpoints:
-      description: Resource scoped endpoint permissions.
+    aclProject:
+      description: A project the subject is a member of.
       type: object
       required:
       - id
       - endpoints
       properties:
         id:
-          description: The resource ID this scope applies to.
+          description: The project ID.
           type: string
         endpoints:
           $ref: '#/components/schemas/aclEndpoints'
-    aclScopedEndpointsList:
-      description: A list of resource scoped endpoint permissions.
+    aclProjectList:
+      description: A list of projects the subject is a member of.
       type: array
       items:
-        $ref: '#/components/schemas/aclScopedEndpoints'
+        $ref: '#/components/schemas/aclProject'
+    aclOrganization:
+      description: An organization the subject is a member of.
+      type: object
+      required:
+      - id
+      properties:
+        id:
+          description: The organization ID.
+          type: string
+        endpoints:
+          $ref: '#/components/schemas/aclEndpoints'
+        projects:
+          $ref: '#/components/schemas/aclProjectList'
+    aclOrganizationList:
+      description: A list of organizations the subject is a member of.
+      type: array
+      items:
+        $ref: '#/components/schemas/aclOrganization'
     acl:
       description: A list of access control scopes and permissions.
       type: object
       properties:
         global:
           $ref: '#/components/schemas/aclEndpoints'
+        organizations:
+          $ref: '#/components/schemas/aclOrganizationList'
         organization:
-          $ref: '#/components/schemas/aclScopedEndpoints'
+          $ref: '#/components/schemas/aclOrganization'
         projects:
-          $ref: '#/components/schemas/aclScopedEndpointsList'
+          $ref: '#/components/schemas/aclProjectList'
     stringList:
       description: A list of strings.
       type: array
